Network_policies/DefaultDeny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-deny-ploicy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
    
#Apply a default deny policy to disallow all the traffic from all the pods
