Network_policies/egressIpBlock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ploicy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:
        matchLabels:
          name: production
    ports:
    - protocol: TCP
    port: 3306
  egress:
  - to:
    - ipBlock:
      cidr: 192.168.5.10/32
    ports:
      protocol: TCP
      port: 80
    
#Apply network policy on 'db' pods to allow 
  #ingress traffic: from 'api-pods' in prod namespace (and)
  #egress traffic from db pods to external machine 192.168.5.10.
