Network_policies/namespaceSelector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ploicy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:
        matchLabels:
          name: production
    ports:
    - protocol: TCP
    port: 3306
    
#Read as apply network policy on 'db' pods to allow ingress traffic 
#from 'api-pods' in production namespace on port 3306 and protocol TCP.
