Network_policies/np1.yaml
#Task-1: to restrict all the ingress and egress traffic to a pod with label role:db.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ploicy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
