Network_policies/np2.yaml
#Task-2: to allow ingress traffic to db pod on port 3306 from api pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ploicy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
            role: api
    ports:
    - protocol: TCP
      port: 3306
      


#if there are multiple namespcaes with api pods then to restrict pod access only to one namespace(prod) use as below:
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ploicy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  #allow ingress from api pod in namespace on port 3306 of db pod
  - from:
    - podSelector:
        matchLabels:
            role: api
      namespaceSelector:
        matchLabels:
            name: prod
    ports:
    - protocol: TCP
      port: 3306






# k8s@k8s-21:~/ezpedvi> kubectl get pods --show-labels
# NAME                READY   STATUS    RESTARTS   AGE   LABELS
# ezpedvi-api         1/1     Running   0          32m   role=api,run=ezpedvi-api
# ezpedvi-db          1/1     Running   0          33m   role=db,run=ezpedvi-db
# ezpedvi-webserver   1/1     Running   0          32m   role=webserver,run=ezpedvi-webserver
