Network_policies/np5.yaml
#task5: create a default deny network policy. i.e create a np that denies ingress and egress traffic to all pods in a namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress 
  # this DNS reslution ports are necessary because.. k8s can only resolve pod names using dns ports 
  egress:
  - to:
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
