Network_policies/np6.yaml
#task6: all frontend pods to communicate with backened pods when default deny policy is existing
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
        run: ezpedvi-frontend
  policyTypes:
  - Egress 
  egress:
  - to:
    - podSelector:
        matchLabels:
            run: ezpedvi-backend
 
 ---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: default
spec:
  podSelector:
    matchLabels:
        run: ezpedvi-backend
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - podSelector:
        matchLabels:
            run: ezpedvi-frontend
            
# k8s@k8s-215:~/ezp> kubectl get pods
# NAME               READY   STATUS    RESTARTS   AGE
# ez-backend    1/1     Running   0          75m
# ez-database   1/1     Running   0          75m
# ez-frontend   1/1     Running   0          75m
